Fixed caption color contrast error

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -531,3 +531,7 @@ legend {
 .dark-mode #table-title {
     background-color: black;
 }
+
+.dark-mode caption {
+    color: var(--accent-color);
+}
